# distributed-monitor

./: CMakeLists.txt  README.md
.cache/clangd/index/: Acceptor.h.67C153A70612E341.idx  Buffer.h.0F0BB443C7B15BED.idx  Callbacks.h.8DFEDF0EEF2046A5.idx  Channel.h.F980080B17E3EB15.idx  CurrentThread.h.276DD02EA33F6B61.idx  EventLoop.h.2DD439C631C3E2A1.idx  EventLoopThreadPool.h.D6BEDD934F359674.idx  InetAddress.h.EFCE5B59836F6A7F.idx  Krpcapplication.h.52B36F863808E1D8.idx  Krpcchannel.h.BE7B36D2B3EF534D.idx  Krpcconfig.h.02C3F117493E5D39.idx  Krpccontroller.h.90BA44C51B76AC25.idx  Krpcprovider.h.70384206BE7F6505.idx  Socket.h.0C3A4621E4EA5A64.idx  TcpConnection.h.C14D7DE31D08EE25.idx  TcpServer.h.EF10839283AF6798.idx  Timestamp.h.329AA06A139FDF08.idx  animation.hpp.92BF3DAC509E00B8.idx  autoreset.hpp.C8889465D052D696.idx  box.hpp.EEB4B9C4A818D07A.idx  canvas.hpp.FB39788843A68436.idx  captured_mouse.hpp.DDDC1050F9FED698.idx  center.cc.5788086DB22213E1.idx  collector.cc.D4EC8027117B516B.idx  color.hpp.9AD9DCA2CD8B5FC9.idx  component.hpp.858584B310331885.idx  component_base.hpp.6D69094F7B039734.idx  component_options.hpp.97E44DFF2A7A8BAF.idx  deprecated.hpp.F1F351C4824A3436.idx  direction.hpp.0DB142998F057235.idx  elements.hpp.1A599CE9FB64ADDE.idx  event.hpp.C4138E3CB02E1E06.idx  flexbox_config.hpp.C24CE5BCA8F10B68.idx  image.hpp.99DF5963858456BD.idx  linear_gradient.hpp.34225AEFD30488B1.idx  monitor.pb.cc.9DE03347F84C27CF.idx  monitor.pb.h.0CAFA1A2778BA107.idx  mouse.hpp.E59A65B402AB77D3.idx  node.hpp.826E6732B202760E.idx  noncopyable.h.1A212C5A92CC90BE.idx  (+13 more)
bin-for-debian/: collector  test.conf  tui
center/: CMakeLists.txt  center.cc
collector/: CMakeLists.txt  collector.cc
common/: monitor.pb.cc  monitor.pb.h  monitor.proto
tui/: CMakeLists.txt  tui.cc
tui-windows/: CMakeLists.txt  Krpcheader.pb.cc  Krpcheader.pb.h  Krpcheader.proto  README.md  monitor.pb.cc  monitor.pb.h  monitor.proto  tui-windows-测试网络通信.cc  tui-windows.cc
